generate sections recursively and styling

--- a/src/style/colors.scss
+++ b/src/style/colors.scss
@@ -1,10 +1,13 @@
 $black: #1b262c;
 $brand-color: #ffe75e;
-$primary-bg: #fffdf9;
-$secondary-bg: #f1f3f4;
 
+$primary-bg: #fffdf9;
+$secondary-bg: #fafafa;
+
+$white: #ffffff;
 $orange: #ff6f5e;
 $green: #00918e;
 $green-light: #7fcd91;
 $blue: #4f98ca;
+$dark-blue: #35495e;
 $yellow: #ffdc34;
