sections added contact form customised

--- a/src/style/colors.scss
+++ b/src/style/colors.scss
@@ -1,8 +1,11 @@
 $black: #1b262c;
+$mid-black: #4e5763;
+$light-black: #6f7987;
 $brand-color: #ffe75e;
 
 $primary-bg: #fffdf9;
-$secondary-bg: #fafafa;
+$secondary-bg: #f2f2f2;
+$terciary-bg: #fffbec;
 
 $white: #ffffff;
 $orange: #ff6f5e;
