--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -1,6 +1,7 @@
 @import "./reset.scss";
 @import "./colors.scss";
 @import "./background.scss";
+@import "./custom-fonts.scss";
 
 .main-layout {
   color: $black;
@@ -46,7 +47,7 @@
     justify-content: center;
     align-items: center;
     justify-content: end;
-    padding: 30px 0;
+    padding-top: 50px;
 
     &__image {
       margin: 0 40px;
@@ -73,7 +74,11 @@
   }
 
   .card-footer {
-    padding-bottom: 20px;
+    padding: 20px 0;
+    background-color: $brand-color;
+
+    box-shadow: 0 2px 2px -2px rgba(0,0,0,.2);
+
     ul {
       list-style: none;
       padding: 0;
@@ -83,6 +88,15 @@
 
       li {
         margin: 0 10px;
+        cursor: pointer;
+        transition: color ease-in-out 0.35s, text-shadow ease-in-out 0.35s;
+        font-weight: 600;
+        letter-spacing: 0.1rem;
+
+        &:hover{
+          color: $dark-blue;
+          text-shadow: 1px 1px 1px rgba(255, 111, 94, 0.5);
+        }
       }
     }
   }
