--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -8,6 +8,10 @@
   background-color: $primary-bg;
 }
 
+body{
+  background-color: $brand-color;
+}
+
 .container {
   $tablet-width: 768px;
   $desktop-width: 1024px;
@@ -113,9 +117,10 @@ footer {
 section {
   @extend .no-user-select;
   .content {
-    padding: 60px 60px 80px 60px;
+    padding: 80px 60px;
     display: flex;
     justify-content: space-between;
+    align-items: center;
 
     h2 {
       text-transform: uppercase;
@@ -146,12 +151,19 @@ section {
       color: $light-black;
     }
 
-    .content-image {
+    &-image {
       display: flex;
       align-items: center;
       margin: 0 40px;
       img {
         height: 325px;
+      }
+    }
+
+    &-box{
+      width: 60%;
+      p ~ .icon-container{
+        margin-top: -20px;
       }
     }
 
@@ -175,12 +187,64 @@ section {
         }
       }
     }
+
+    .icon-inline{
+      display: flex;
+      align-items: center;
+      i{
+        font-size: 20px;
+        margin-right: 10px;
+      }
+    }
+
+    .icon-container{
+      display: flex;
+      margin-bottom: 20px;
+      margin-left: -5px;
+      align-items: center;
+
+      a{
+        text-decoration: none;
+      }
+      
+      i{
+        font-size: 50px;
+        margin-right: 15px;
+      }
+
+      .icon_youtube{
+        color: red;
+      }
+
+      .icon_instagram{
+        color: #E1306C;
+        font-size: 40px;
+      }
+
+      .icon_facebook{
+        color: #4267B2;
+        font-size: 40px;
+      }
+
+      .icon_twitter{
+        color:#1DA1F2;
+        font-size: 45px;
+      }
+
+      .icon_linkedin{
+        color: #2867B2;
+        font-size: 40px;
+      }
+      .icon_github{
+        font-size: 40px;
+      }
+    }
   }
 }
 
 .parallex-image-class {
   img {
-    max-height: 400px;
+    max-height: 325px;
   }
 }
 
@@ -213,7 +277,7 @@ section {
   border-radius: 4px;
   cursor: pointer;
   text-transform: uppercase;
-  letter-spacing: 0.1rem;
+  letter-spacing: 0.05rem;
   font-weight: 600;
   transition: box-shadow ease-in-out 0.35s;
   border: none;
@@ -245,7 +309,6 @@ section {
   position: relative;
   margin: 0;
   padding: 50px 30px;
-  // border: 1px solid rgba(0, 0, 0, 0.1);
   border-radius: 8px;
   display: inline-block;
   box-shadow: 0px 0px 6px rgba(0, 0, 0, 0.17);
