--- a/src/style/custom-font-variables.scss
+++ b/src/style/custom-font-variables.scss
@@ -1,6 +1,7 @@
 $custom-font-family: "sumitpal_custom_fonts" !default;
 $custom-font-path: "fonts" !default;
 
+$icon_instagram: "\e900";
 $icon_mail: "\e159";
 $icon_tick: "\e876";
 $icon_cross: "\e927";
