--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -8,6 +8,10 @@
   background-color: $primary-bg;
 }
 
+html{
+  scroll-behavior: smooth;
+}
+
 body{
   background-color: $brand-color;
 }
@@ -96,6 +100,11 @@ body{
         transition: color ease-in-out 0.35s, text-shadow ease-in-out 0.35s;
         font-weight: 600;
         letter-spacing: 0.1rem;
+
+        a{
+          text-decoration: none;
+          color: inherit;
+        }
 
         &:hover{
           color: $dark-blue;
