--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -8,11 +8,11 @@
   background-color: $primary-bg;
 }
 
-html{
+html {
   scroll-behavior: smooth;
 }
 
-body{
+body {
   background-color: $brand-color;
 }
 
@@ -21,16 +21,13 @@ body{
   $desktop-width: 1024px;
   $large-width: 1440px;
   margin: 0 auto;
-  @mixin tablet {
-    @media (min-width: #{$tablet-width}) and (max-width: #{$desktop-width - 1px}) {
-      max-width: 700px;
-    }
+  
+  @media (min-width: #{$tablet-width}) and (max-width: #{$desktop-width - 1px}) {
+    max-width: 700px;
   }
 
-  @mixin desktop {
-    @media (min-width: #{$desktop-width})  and (max-width: #{$large-width - 1px}) {
-      max-width: 940px;
-    }
+  @media (min-width: #{$desktop-width})  and (max-width: #{$large-width - 1px}) {
+    max-width: 940px;
   }
 
   @media (min-width: #{$large-width}) {
@@ -81,11 +78,29 @@ body{
     }
   }
 
+  .show-name {
+    span {
+      opacity: 1 !important;
+    }
+  }
+
   .card-footer {
     padding: 20px 0;
     background-color: $brand-color;
+    box-shadow: 0 2px 2px -2px rgba(0, 0, 0, 0.2);
 
-    box-shadow: 0 2px 2px -2px rgba(0,0,0,.2);
+    .container {
+      display: flex;
+      justify-content: space-between;
+
+      span {
+        opacity: 0;
+        transition: opacity ease 0.35s;
+        font-weight: bold;
+        text-transform: uppercase;
+        letter-spacing: 2px;
+      }
+    }
 
     ul {
       list-style: none;
@@ -101,12 +116,12 @@ body{
         font-weight: 600;
         letter-spacing: 0.1rem;
 
-        a{
+        a {
           text-decoration: none;
           color: inherit;
         }
 
-        &:hover{
+        &:hover {
           color: $dark-blue;
           text-shadow: 1px 1px 1px rgba(255, 111, 94, 0.5);
         }
@@ -169,9 +184,9 @@ section {
       }
     }
 
-    &-box{
+    &-box {
       width: 60%;
-      p ~ .icon-container{
+      p ~ .icon-container {
         margin-top: -20px;
       }
     }
@@ -197,54 +212,54 @@ section {
       }
     }
 
-    .icon-inline{
+    .icon-inline {
       display: flex;
       align-items: center;
-      i{
+      i {
         font-size: 20px;
         margin-right: 10px;
       }
     }
 
-    .icon-container{
+    .icon-container {
       display: flex;
       margin-bottom: 20px;
       margin-left: -5px;
       align-items: center;
 
-      a{
+      a {
         text-decoration: none;
       }
-      
-      i{
+
+      i {
         font-size: 50px;
         margin-right: 15px;
       }
 
-      .icon_youtube{
+      .icon_youtube {
         color: red;
       }
 
-      .icon_instagram{
-        color: #E1306C;
+      .icon_instagram {
+        color: #e1306c;
         font-size: 40px;
       }
 
-      .icon_facebook{
-        color: #4267B2;
+      .icon_facebook {
+        color: #4267b2;
         font-size: 40px;
       }
 
-      .icon_twitter{
-        color:#1DA1F2;
+      .icon_twitter {
+        color: #1da1f2;
         font-size: 45px;
       }
 
-      .icon_linkedin{
-        color: #2867B2;
+      .icon_linkedin {
+        color: #2867b2;
         font-size: 40px;
       }
-      .icon_github{
+      .icon_github {
         font-size: 40px;
       }
     }
