--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -51,7 +51,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    justify-content: end;
+    justify-content: flex-start;
     padding-top: 50px;
 
     &__image {
