--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -244,38 +244,48 @@ section {
 
       a {
         text-decoration: none;
-      }
+        text-decoration: none;
+        width: 45px;
+        height: 45px;
+        margin: 10px;
+        border-radius: 50%;
+        overflow: hidden;
+        background: #ffffff;
+        text-align: center;
+        box-shadow: 2px 2px 8px rgba(0, 0, 0, 0.2),
+          -2px -2px 8px rgba(255, 249, 206, 0.9);
+        vertical-align: middle;
+        line-height: 54px;
 
-      i {
-        font-size: 50px;
-        margin-right: 15px;
-      }
+        &:hover{
+          box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.2),
+          -2px -2px 10px rgba(255, 249, 206, 0.9);
+        }
 
-      .icon_youtube {
-        color: red;
-      }
+        i {
+          font-size: 25px;
+          margin-left: 1px;
+        }
 
-      .icon_instagram {
-        color: #e1306c;
-        font-size: 40px;
-      }
+        .icon_youtube {
+          color: red;
+        }
 
-      .icon_facebook {
-        color: #4267b2;
-        font-size: 40px;
-      }
+        .icon_instagram {
+          color: #e1306c;
+        }
 
-      .icon_twitter {
-        color: #1da1f2;
-        font-size: 45px;
-      }
+        .icon_facebook {
+          color: #4267b2;
+        }
 
-      .icon_linkedin {
-        color: #2867b2;
-        font-size: 40px;
-      }
-      .icon_github {
-        font-size: 40px;
+        .icon_twitter {
+          color: #1da1f2;
+        }
+
+        .icon_linkedin {
+          color: #2867b2;
+        }
       }
     }
   }
