--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -203,7 +203,7 @@ section {
           background-color: #a0a0a0a7;
           position: absolute;
           left: -16px;
-          top: 20px;
+          top: 19px;
         }
 
         &:last-child {
@@ -218,11 +218,12 @@ section {
           top: 7px;
           left: -20px;
           background: transparent;
-          box-shadow: 0 2px 4px rgba(62, 57, 107, 0.66);
+          box-shadow: 0 2px 3px rgba(62, 57, 107, 0.66);
           background-color: $brand-color;
           width: 10px;
           height: 10px;
           border-radius: 50%;
+          border: 1px solid rgb(254, 199, 1);
         }
       }
     }
@@ -256,10 +257,11 @@ section {
           -2px -2px 8px rgba(255, 249, 206, 0.9);
         vertical-align: middle;
         line-height: 54px;
+        transition: box-shadow ease-in-out 0.35s;
 
         &:hover{
-          box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.2),
-          -2px -2px 10px rgba(255, 249, 206, 0.9);
+          box-shadow: 2px 3px 10px rgba(0, 0, 0, 0.4),
+          -2px -3px 10px rgba(255, 249, 206, 0.9);
         }
 
         i {
@@ -285,6 +287,10 @@ section {
 
         .icon_linkedin {
           color: #2867b2;
+        }
+
+        .icon_github{
+          color: $black;
         }
       }
     }
